# Donphan

./: .flake8  .gitignore  .readthedocs.yml  LICENSE  README.rst  docs-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  publish.yml
docs/: LICENSE  Makefile  api.rst  column.rst  conf.py  core.rst  index.rst  intro.rst  make.bat  migrating_to_v4.rst  quickstart.rst  table.rst  types.rst  view.rst
docs/_static/: settings.js  style.css
docs/_templates/: genindex.html  layout.html
docs/extensions/: attributetable.py  builder.py  details.py  exception_hierarchy.py  resourcelinks.py
donphan/: __init__.py  _cache.py  _column.py  _connection.py  _consts.py  _creatable.py  _custom_types.py  _enums.py  _insertable.py  _join.py  _object.py  _selectable.py  _sqltype.py  _table.py  _types.pyi  _view.py  abc.py  column.py  connection.py  consts.py  creatable.py  custom_types.py  enums.py  insertable.py  meta.py  selectable.py  sqltype.py  table.py  types.py  types.pyi  utils.py  view.py
examples/: custom_enum.py  nested_join.py
tests/: __init__.py  env.py  test_a_flake8.py  test_a_linters.py  test_b_connect.py  test_b_connection.py  test_c_sqltype.py  test_c_table.py  test_d_table.py  test_e_enum.py  test_f_foreign_key.py  test_f_timestamp_codec.py  test_g_join.py  test_h_nullable.py  test_i_like.py  test_k_alter_columns.py  test_l_automatic_migrations.py  test_m_cache_table.py  test_v_view.py  test_v_views.py  test_z_utils.py  utils.py
