[tool.poetry]
name = "Donphan"
version = "3.1.0"
description = "Asyncronous Database ORM for Postgres"
authors = ["bijij <josh@josh-is.gay>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
asyncpg = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = ">=0.800"
pytest = "^6.2.3"

[tool.black]
line-length = 119
target-version = ["py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
