[tool.poetry]
name = "Donphan"
version = "4.1.2"
description = "Asynchronous Database ORM for Postgres"
authors = ["bijij <josh@josh-is.gay>"]
license = "MIT"
readme = "README.rst"
packages = [
  { include = "donphan" },
  { include = "donphan/py.typed" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = ">=0.22.0"
sphinx = { version = ">=3.5.3", optional = true }
sphinxcontrib_trio = { version = ">=1.1.2", optional = true }
sphinxcontrib-websupport = { version = ">=1.2.4", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"

[tool.poetry.extras]
docs = ["sphinx", "sphinxcontrib_trio", "sphinxcontrib-websupport"]

[tool.black]
line-length = 119
target-version = ["py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.venv
)/
'''

[tool.pytest]
addopts = "--capture=no --assert=plain --strict-markers --tb native"
testpaths = "tests"
filterwarnings = "default"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["donphan/**"]
